<resources>
    <string name="app_name">kikyUI</string>
    <string name="connect_with_fb">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="more_options">MORE OPTIONS</string>
    <string name="disclaimer">We don\'t post anything to facebook</string>
    <string name="login_phone">Login with Mobile Number</string>
    <string name="login_email">Login with Mobile E-mail</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="title_activity_main_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_discover">Discover</string>
    <string name="title_message">Message</string>
    <string name="title_friends">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>