<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.kikyui.ui.home.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.kikyui.ui.dashboard.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.kikyui.ui.notifications.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_friend" />
    <fragment
        android:id="@+id/navigation_friend"
        android:name="com.example.kikyui.FriendFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friend" />

</navigation>