<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:gravity="center"
        android:text="Kiky"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_signup_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_more_options"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_google"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@color/design_default_color_secondary_variant"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="@string/connect_with_fb" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_more_options"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/google_btn_bg"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/connect_with_google"
            android:textColor="@color/black"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_more_signup_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_more_options"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circular_bg"
            android:padding="10dp"
            android:src="@drawable/ic_cellphone" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circular_bg"
            android:padding="10dp"
            android:src="@drawable/ic_email" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circular_bg"
            android:padding="10dp"
            android:src="@drawable/ic_twitter" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circular_bg"
            android:padding="10dp"
            android:src="@drawable/ic_vk" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_more_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_disclaimer"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/more_options" />

    <TextView
        android:id="@+id/tv_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_terms_privacy"
        android:layout_centerHorizontal="true"
        android:text="We don't post anything to Facebook" />

    <TextView
        android:id="@+id/tv_terms_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="By using kiky, you agree to the terms of use and privacy policy " />

</RelativeLayout>